@@ -20,6 +20,7 @@ Baywatch 4.01 (unofficial MOD)
 Hook 5.01 (unofficial MOD)
 
 Correct Dumps:
+Bally: Game Show LU-4 (Europe) (simple rename of gs_l4 to gs_lu4), LA-3 (simple rename of gs_l3 to gs_la3)
 Capcom: Kingpin 1.05 Beta (simple rename of kpv106 to kpb105)
 Williams: Mousin' Around! LA-4 (now uses the 'real' L2 sound roms. As this matches the LX-1 set then, LX-1 was removed from PinMAME)
 
